[gd_scene load_steps=4 format=3 uid="uid://bg5ksfp2edphh"]

[ext_resource type="Script" uid="uid://dfi4i4w0i2b1v" path="res://Globals/bullets/bullet_1.gd" id="1_l0bw7"]
[ext_resource type="Texture2D" uid="uid://c5xgkygl0fxui" path="res://Img_assests/Bullets/1.png" id="2_l0bw7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_768je"]
radius = 3.33333
height = 56.6667

[node name="Bullet_1" type="Area2D"]
z_index = -1
collision_layer = 8
collision_mask = 23
script = ExtResource("1_l0bw7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-64.625, -1.28571)
scale = Vector2(2.44231, 1.04762)
texture = ExtResource("2_l0bw7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1)
rotation = 1.5708
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_768je")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
